--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Basic examples of the Spotify authorization flows through OAuth 2",
   "version": "0.0.2",
   "dependencies": {
-    "cookie-parser": "1.3.2",
-    "express": "~4.16.0",
-    "cors": "^2.8.4",
+    "cookie-parser": "^1.3.2",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "query-string": "^6.8.3",
     "querystring": "~0.2.0",
-    "request": "~2.83.0"
+    "request": "^2.83.0"
   }
 }
